--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^3.5.0",
+    "chai-shallow-deep-equal": "^1.4.4",
     "mocha": "^3.2.0",
     "mock-fs": "^3.12.1"
   }
