--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
   "name": "uberfind",
   "version": "1.0.0",
-  "description": "",
+  "description": "Recursive directory walker that retrieves all sub-directory and file paths along with their stats.",
   "main": "index.js",
   "scripts": {
     "test": "mocha --reporter spec",
     "prepublish": "gulp",
-    "test-on-travis": "istanbul cover --report lcovonly mocha -- --timeout 5000 --slow 500 test",
+    "test-on-travis": "istanbul cover --report lcovonly _mocha",
     "upload-to-coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
-  "bin": "node_modules/mocha/bin/mocha",
+  "bin":{
+      "_mocha": "node_modules/mocha/bin/_mocha"
+  },
   "author": "Ioannis Tzanellis <ioannis.kiwe@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "babel-preset-es2015": "^6.22.0",
     "chai": "^3.5.0",
     "chai-shallow-deep-equal": "^1.4.4",
+    "coveralls": "^2.11.16",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
-    "mock-fs": "^3.12.1",
-    "coveralls": "^2.11.9",
-    "istanbul": "^0.4.3"
+    "mock-fs": "^3.12.1"
   }
 }
