--- a/package.json
+++ b/package.json
@@ -6,11 +6,8 @@
   "scripts": {
     "test": "mocha --reporter spec",
     "prepublish": "gulp",
-    "test-on-travis": "istanbul cover --report lcovonly _mocha",
+    "test-on-travis": "istanbul cover --report lcovonly node_modules/mocha/bin/_mocha",
     "upload-to-coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
-  },
-  "bin": {
-    "_mocha": "node_modules/mocha/bin/_mocha"
   },
   "keywords": [
     "recursive",
