--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "mock-fs": "^3.12.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jahnestacado/cousteau"
   }
 }
